- Add match() in js-expression-eval-parser.js for the validation rules.
- The master context object can store the id attribute value of "Detail" buttons. These can be retrieved
  from MASTER_CONTEXT.getValue(RECORD_KEY, "_im_buttom_master_id").
- Enable the Post Only Mode when using an input elemement button (<input type="button"> or <input 
  type="submit">).
- All header description of source files are updated, and build.sh was adapted them.
- Password policy can be set in the 2nd "option" parameter of IM_Entry function.
  The key is 'password-policy' and the following terms can be applied.
  "useAlphabet useNumber useUpper useLower usePunctuation length(10) notUserName",
- Add Dockerfile for CircleCI.
- Add .gitlab-ci.yml for GitLab CI.
- Update buster.js and package.json for unit testing.
- Avoid outputting an error message in an error log file in case of an invalid request.
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".
- [BUG FIX] Fix not to remove focus from input field on the Post Only Mode when using validation in some 
  cases.

Ver.5.2 (August 24, 2015)
- Record Copying is supported for single record, and also with associated records for PDO.
- Authentication with an LDAP user.
- Handle some operators of conditions ('!=', '>', '>=', '<', '<=') as valid when using FileMaker 
  Server.
- The "button-names" key in a context of definition file supports to customize the button names.
- The list aggregate function was introduced.
- Add IMLIbUI.validation() as a public method.
- INTER-Mediator-Server VM can update with just "git pull origin master" command.
- DataConverter classes for currency and number was improved in case of missing locale information.