@@ -1,1 +1,1 @@
-{"version":"5.3-dev","releasedate":"2015-10-22"}
+{"version":"5.3-dev","releasedate":"2015-10-23"}
